# practical02

./: README.md  permit_manager.py  pyproject.toml
.github/workflows/: build.yml  grade.yml
config/: gatorgrade.yml
tests/: test_permit_manager.py  test_permit_manager_starter.py
writing/: reflection.md  reflection_starter.md
