[tool.poetry]
name = "lab-03-writing-maintainable-tests-solution"
version = "0.1.0"
description = ""
authors = ["Maria Kim Heinert <yeeunmariakim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
